# platzky-sendmail

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  release-please-config.json
.github/workflows/: lint.yml  release.yml  test.yml  tests.yml
platzky_sendmail/: __init__.py  entrypoint.py  plugin.py
platzky_sendmail/locale/: .gitignore
platzky_sendmail/locale/en/LC_MESSAGES/: messages.po
platzky_sendmail/locale/pl/LC_MESSAGES/: messages.po
tests/: test_plugin.py
