[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "platzky_sendmail"
version = "0.2.0"
description = "Platzky plugin for sending emails with optional file attachments"
authors = ["Krzysztof Kołodziński"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
pydantic = {extras = ["email"], version = "^2.13"}
platzky = ">=2.0.0a0,<3.0.0"

[tool.poetry.plugins."platzky.plugins"]
sendmail = "platzky_sendmail:SendMailPlugin"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
black = "^26.3.1"
ruff = ">=0.14,<1.0"
pyright = "^1.1.390"
coverage = "^7.6.9"
interrogate = "^1.7.0"

[tool.black]
line-length = 100
target-version = ["py314"]

[tool.ruff]
line-length = 100
target-version = "py314"
show-fixes = true

[tool.ruff.lint]
select = [
    "I",
    "F",
    "E",
    "W",
    "PT",
    "RUF",
]

[tool.pyright]
pythonVersion = "3.14"
pythonPlatform = "All"
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false
reportMissingParameterType = true
reportUnknownArgumentType = true
reportUnknownMemberType = true
reportUnknownVariableType = true
reportUnknownParameterType = true
reportUnnecessaryTypeIgnoreComment = true
reportUntypedClassDecorator = false
reportUntypedFunctionDecorator = false
reportUnnecessaryIsInstance = false
reportUnusedFunction = true
reportUntypedBaseClass = false

[tool.pytest.ini_options]
markers = [
    "skip_coverage: skip coverage for this test",
]

[tool.interrogate]
fail-under = 95
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-private = true
ignore-semiprivate = false
exclude = ["tests", "docs"]
